--- a/index.html
+++ b/index.html
@@ -6,8 +6,123 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unicycle Smile</title>
     <link rel="stylesheet" href="CSS/style.css">
+   
 </head>
 <body>
+    <header class="bg-switcher">
+        <nav>
+            <div class="logo"><img src="images/smile_logo.png" alt=""></div>
+            <ul>
+                <li><a href="#about">ユニサイクルスマイルとは</a></li>
+                <li><a href="#event">大会・イベント</a></li>
+                <li><a href="#activity">活動内容</a></li>
+                <li><a href="#contact">お問い合わせ</a></li>
+            </ul>
+        </nav>
+        <h1>ユニサイクルスマイル</h1>
+    </header>
+
+    <section id="about">
+        <h2>ユニサイクルスマイルとは？</h2>
+        <div class="about">
+            <img class="about-img" src="images/uni00.png" alt="">
+            <div class="about-text-right">
+                <h3>みんなが<br>スマイルになれる場所！</h3>
+                <p><br>ユニサイクルスマイルとは、座間市・相模原市で活動する一輪車チームです。2005年に結成され、現在は幼稚園生から大学生まで、女の子と男の子の全27名で楽しく活動しています！</p>
+                <a class="button" href="">Instagram</a>
+                <a class="button" href="">Youtube</a>
+            </div>
+        </div>
+        <div class="about">
+            <div class="about-text-left">
+                <h3>刺激をもらいながら楽しく練習できる！</h3>
+                <p><br>ユニサイクルスマイルでは、クラブ全員が同じ時間に練習します。コーチからの指導だけでなく実績のあるお姉さん部員と一緒に練習したり、教えてもらえるため、毎回刺激をもらいながら練習できます！部員みんなとっても優しく、年齢関係なくお話ししながら練習しているので楽しいこと間違いなし！</p>
+            </div>
+            <img class="about-img01" src="images/uni01.png" alt="">
+        </div>
+        <div class="about">
+            <img class="about-img02" src="images/uni02.png" alt="">
+            <div class="about-text-right">
+                <h3>プリンス、プリンセスになれる素敵な衣装！</h3>
+                <p><br>大会やイベントには練習着ではなく、衣装を着て出ます！キラキラしたストーンをいっぱいつけた衣装はとってもかわいいくて、ワクワクが止まりません！普段とは違う自分でテンションも上がります！年齢が上がるとスカートも長くなり、綺麗でドレスのような衣装を着れます！年齢の低い部員はお姉さんの衣装に憧れています。</p>
+            </div>
+        </div>
+        <div class="about">
+            <div class="about-text-left">
+                <h3>様々なジャンルの演技！<br>構成はピカイチ！</h3>
+                <p><br>ユニサイクルスマイルでは、クラブ全員が同じ時間に練習します。コーチからの指導だけでなく実績のあるお姉さん部員と一緒に練習したり、教えてもらえるため、毎回刺激をもらいながら練習できます！部員みんなとっても優しく、年齢関係なくお話ししながら練習しているので楽しいこと間違いなし！</p>
+            </div>
+            <img class="about-img03" src="images/uni03.png" alt="">
+        </div>
+    </section>
+    
+    <section id="event">
+        <h2>大会・イベント</h2>
+        <div class="event">
+            <div class="about-text-left">
+                <p>小さな大会から国際大会まで多くの大会に出場し、入賞・優勝しています。クラブ発表会や地元のイベントなどにも積極的に参加しています。</p>
+                <a class="button2" href="events.html">詳しくはこちら→</a>
+            </div>
+            <div class="people-right">
+                <p class="tate">＼　メダルをもらえたときは　／<br>　　すごくうれしいよ！</p>
+                <img class="people" src="images/p01.png" alt="">
+            </div>
+        </div>
+        <img class="rect" src="images/rect.png" alt="">
+    </section>
+
+    <section id="activity">
+        <h2 class="title2">活動内容</h2>
+        <div class="activity">
+            <div class="people-left">
+                <img class="people" src="images/p02.png" alt="">
+                <p class="tate">　　メダルをもらえたときは<br>／　すごくうれしいよ！　　＼</p>
+            </div>
+            <div class="about-text-right">
+                <p>週5回、座間市・相模原市の小学校の体育館で練習しています。</p>
+                <a class="button2" href="">詳しくはこちら→</a>
+            </div>
+        </div>
+        <img class="rect2" src="images/rect2.png" alt="">
+    </section>
+
+    <section id="message">
+        <h2>メッセージ</h2>
+        <div class="message">
+            <p>ユニサイクルスマイルはみんながかがやけるばしょ！<br>ぜひ、たいけんにきてね！！</p>
+            <img src="images/message-pic.png" alt="">
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>お問い合わせ</h2>
+        <div class="all-contacts">
+        <div class="contacts">
+        <div class="contact">
+            <img src="images/icon-tel.png" alt="">
+            <p>080-4420-6541　太田</p>
+        </div>
+        <div class="contact">
+            <img src="images/icon-insta.png" alt="">
+            <p>unicycle_smile</p>
+        </div>
+    </div>
+        <div class="people-rui">
+            <img class="people" src="images/p03.png" alt="">
+            </div>
+
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; ユニサイクルスマイル</p>
+    </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="js/jquery.bgswitcher.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/main.js"></script>
+
     
 </body>
 </html>
