--- a/events.html
+++ b/events.html
@@ -23,10 +23,9 @@
                 <li><a href="#contact">お問い合わせ</a></li>
             </ul>
         </nav>
-        <h1>ユニサイクルスマイル</h1>
     </header>
 
-    <h2>大会・イベント</h2>
+    <h2 class="title23">大会・イベント</h2>
     
 <section id="unicon">
     <div class="unicon">
@@ -89,7 +88,7 @@
                 <p><br>ユニサイクルスマイルの発表会を1回開催しました。舞台での演技や映像と融合した演技で大会とは違った経験ができます。</p>
             </div>
             <div class="people-right">
-                <p class="tate">みんなでれるよ！<br>とってもたのしい！</p>
+                <p class="tate"><br>＼　みんなでれるよ！　／<br>　　とってもたのしい！</p>
                 <img class="people-rui2" src="images/p06.png" alt="">
             </div>
         </div>
