--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
             <div class="about-text-right">
                 <p>週5回、座間市・相模原市の小学校の体育館で練習しています。</p>
-                <a class="button2" href="">詳しくはこちら→</a>
+                <a class="button2" href="activity.html">詳しくはこちら→</a>
             </div>
         </div>
         <img class="rect2" src="images/rect2.png" alt="">
