--- a/activity.html
+++ b/activity.html
@@ -18,10 +18,10 @@
         <nav>
             <div class="logo"><img src="images/smile_logo.png" alt=""></div>
             <ul>
-                <li><a href="#about">ユニサイクルスマイルとは</a></li>
-                <li><a href="#event">大会・イベント</a></li>
-                <li><a href="#activity">活動内容</a></li>
-                <li><a href="#contact">お問い合わせ</a></li>
+                <li><a href="index.html">ユニサイクルスマイルとは</a></li>
+                <li><a href="index.html">大会・イベント</a></li>
+                <li><a href="index.html">活動内容</a></li>
+                <li><a href="index.html">お問い合わせ</a></li>
             </ul>
         </nav>
     </header>
