--- a/events.html
+++ b/events.html
@@ -17,10 +17,10 @@
         <nav>
             <div class="logo"><img src="images/smile_logo.png" alt=""></div>
             <ul>
-                <li><a href="#about">ユニサイクルスマイルとは</a></li>
-                <li><a href="#event">大会・イベント</a></li>
-                <li><a href="#activity">活動内容</a></li>
-                <li><a href="#contact">お問い合わせ</a></li>
+                <li><a href="index.html">ユニサイクルスマイルとは</a></li>
+                <li><a href="index.html">大会・イベント</a></li>
+                <li><a href="index.html">活動内容</a></li>
+                <li><a href="index.html">お問い合わせ</a></li>
             </ul>
         </nav>
     </header>
@@ -34,7 +34,7 @@
             <div class="about-text-left">
                 <p><br>隔年で開催される一輪車競技の国際大会にユニサイクルスマイルも出場し、好成績を収めています。</p>
             </div>
-            <div class="people-right">
+            <div class="people-right boxLeft">
                 <p class="tate">＼　せかい１　　　　　／<br>　　いっしょにめざそ！</p>
                 <img class="people-rui2" src="images/p04.png" alt="">
             </div>
@@ -56,7 +56,7 @@
         <h3>全日本一輪車競技大会</h3>
         <div class="zenkoku-contents">
 
-            <div class="people-left">
+            <div class="people-left boxRight">
                 <img class="people-rui2" src="images/p05.png" alt="">
                 <p class="tate">　キラキラなトロフィー<br>／　げっとしよう！　＼</p>
             </div>
@@ -87,7 +87,7 @@
             <div class="about-text-left">
                 <p><br>ユニサイクルスマイルの発表会を1回開催しました。舞台での演技や映像と融合した演技で大会とは違った経験ができます。</p>
             </div>
-            <div class="people-right">
+            <div class="people-right boxLeft">
                 <p class="tate"><br>＼　みんなでれるよ！　／<br>　　とってもたのしい！</p>
                 <img class="people-rui2" src="images/p06.png" alt="">
             </div>
@@ -140,6 +140,7 @@
     
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <script src="js/jquery.bgswitcher.js"></script>
+<script src="js/jquery.inview.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/main.js"></script>
     
