--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <div class="about-text-right">
                 <h3>みんなが<br>スマイルになれる場所！</h3>
                 <p><br>ユニサイクルスマイルとは、座間市・相模原市で活動する一輪車チームです。2005年に結成され、現在は幼稚園生から大学生まで、女の子と男の子の全27名で楽しく活動しています！</p>
-                <a class="button" href="">Instagram</a>
-                <a class="button" href="">Youtube</a>
+                <a class="button" href="https://www.instagram.com/unicycle_smile/">Instagram</a>
+                <a class="button" href="https://www.youtube.com/channel/UCtc7etqYdWTuE3OZni9VvpQ/videos">Youtube</a>
             </div>
         </div>
         <div class="about">
@@ -63,7 +63,7 @@
                 <p>小さな大会から国際大会まで多くの大会に出場し、入賞・優勝しています。クラブ発表会や地元のイベントなどにも積極的に参加しています。</p>
                 <a class="button2" href="events.html">詳しくはこちら→</a>
             </div>
-            <div class="people-right">
+            <div class="people-right boxLeft">
                 <p class="tate">＼　メダルをもらえたときは　／<br>　　すごくうれしいよ！</p>
                 <img class="people" src="images/p01.png" alt="">
             </div>
@@ -74,9 +74,9 @@
     <section id="activity">
         <h2 class="title2">活動内容</h2>
         <div class="activity">
-            <div class="people-left">
+            <div class="people-left boxRight">
                 <img class="people" src="images/p02.png" alt="">
-                <p class="tate">　　メダルをもらえたときは<br>／　すごくうれしいよ！　　＼</p>
+                <p class="tate">　　さいしょは<br>／　すこしのさんかでもいいよ！　＼</p>
             </div>
             <div class="about-text-right">
                 <p>週5回、座間市・相模原市の小学校の体育館で練習しています。</p>
@@ -107,11 +107,14 @@
             <p>unicycle_smile</p>
         </div>
     </div>
-        <div class="people-rui">
+        <div class="people-rui boxLeft">
+            <p class="tate">＼　ぜひ　　　　　　　　　　／<br>　　インスタグラムもみてね！</p>
             <img class="people" src="images/p03.png" alt="">
             </div>
 
         </div>
+
+
     </section>
 
     <footer>
@@ -119,7 +122,9 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    
     <script src="js/jquery.bgswitcher.js"></script>
+    <script src="js/jquery.inview.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
 
