--- a/activity.html
+++ b/activity.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/slick.css">
     <link rel="stylesheet" href="CSS/slick-theme.css">
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/events.css">
+    <!-- <link rel="stylesheet" href="CSS/events.css"> -->
     <link rel="stylesheet" href="CSS/activity.css">
 
     
@@ -63,6 +63,7 @@
             <p class="center">わかば祭り</p>
             <p class="top-left">０５</p>
         </div> -->
+        <div class="year-wrapper">
         <div class="right">
             <img class=".year-pic" src="images/4.png" alt="">
         </div>
@@ -99,6 +100,7 @@
         <div class="left">
             <img class=".year-pic"src="images/3.png" alt="">
         </div>
+    </div>
     </div>
 
     <img class="rect2" src="images/rect3.png" alt="">
