--- a/events.html
+++ b/events.html
@@ -45,9 +45,8 @@
         <li><img src="images/unicon1.jpg" alt=""><p>UNICON20<br>Individual Freestyl 19-20agee<br>1st place</p></li>
         <li><img src="images/unicon2.jpg" alt=""><p>UNICON20<br>Individual Freestyle 17age<br>1st place</p></li>
         <li><img src="images/unicon3.jpg" alt=""><p>UNICON20<br>Individual Freestyle 14age<br>1st place</p></li>
-        <li><img src="images/unicon1.jpg" alt=""><p>UNICON20<br>Individual Freestyl 19-20agee<br>1st place</p></li>
-        <li><img src="images/unicon2.jpg" alt=""><p>UNICON20<br>Individual Freestyl 19-20agee<br>1st place</p></li>
-        <li><img src="images/unicon3.jpg" alt=""><p>UNICON20<br>Individual Freestyl 19-20agee<br>1st place</p></li>
+        <li><img src="images/unicon4.jpg" alt=""><p>UNICON20<br>Pair Freestyl 19-20agee<br>3rd place</p></li>
+        <li><img src="images/unicon5.jpg" alt=""><p>UNICON20<br>Small Group Expert<br>3rd place</p></li>
     </ul>
 </section>
 
@@ -69,12 +68,11 @@
     </div>
 
     <ul class="slide-items">
-        <li><img src="images/unicon1.jpg" alt=""><p><br>2022　小学生グループ演技S<br>6位入賞</p></li>
-        <li><img src="images/unicon2.jpg" alt=""><p><br>2022　ペア高校生以上<br>6位入賞</p></li>
-        <li><img src="images/unicon3.jpg" alt=""><p><br>2021　中学生以上グループS<br>3位</p></li>
-        <li><img src="images/unicon1.jpg" alt=""><p><br>2022　小学生グループ演技S<br>6位入賞</p></li>
-        <li><img src="images/unicon2.jpg" alt=""><p><br>2022　小学生グループ演技S<br>6位入賞</p></li>
-        <li><img src="images/unicon3.jpg" alt=""><p><br>2022　小学生グループ演技S<br>6位入賞</p></li>
+        <li><img src="images/zenkoku1.jpg" alt=""><p><br>2022　小学生グループ演技S<br>6位入賞</p></li>
+        <li><img src="images/zenkoku2.jpg" alt=""><p><br>2022　ペア高校生以上<br>6位入賞</p></li>
+        <li><img src="images/zenkoku3.jpg" alt=""><p><br>2021　中学生以上グループS<br>3位</p></li>
+        <li><img src="images/zenkoku4.jpg" alt=""><p><br>2019　ソロ演技中学生の部<br>6位入賞</p></li>
+        <li><img src="images/zenkoku5.jpg" alt=""><p><br>2019　ソロ演技小学生の部<br>5位入賞</p></li>
     </ul>
 </section>
 
@@ -95,12 +93,12 @@
     </div>
 
     <ul class="slide-items bottom">
-        <li><img src="images/unicon1.jpg" alt=""><p><br>Light<br><br></p></li>
-        <li><img src="images/unicon2.jpg" alt=""><p><br>Flight of the Silverbird<br><br></p></li>
-        <li><img src="images/unicon3.jpg" alt=""><p><br>Friend Like Me<br><br></p></li>
-        <li><img src="images/unicon1.jpg" alt=""><p><br>Light<br><br></p></li>
-        <li><img src="images/unicon2.jpg" alt=""><p><br>Light<br><br></p></li>
-        <li><img src="images/unicon3.jpg" alt=""><p><br>Light<br><br></p></li>
+        <li><img src="images/recital1.jpg" alt=""><p><br>Light<br><br></p></li>
+        <li><img src="images/recital2.jpg" alt=""><p><br>Flight of the Silverbird<br><br></p></li>
+        <li><img src="images/recital3.jpg" alt=""><p><br>Friend Like Me<br><br></p></li>
+        <li><img src="images/recital4.jpg" alt=""><p><br>Rose<br><br></p></li>
+        <li><img src="images/recital5.jpg" alt=""><p><br>Me rio de ti Letra<br><br></p></li>
+        <li><img src="images/recital6.jpg" alt=""><p><br>Moonlight<br><br></p></li>
     </ul>
 
     <div class="youtube">
@@ -112,24 +110,22 @@
 <section id="media">
         <h3>メディア</h3>
     <ul class="slide-items bottom">
-        <li><img src="images/unicon1.jpg" alt=""><p><br>Light<br><br></p></li>
-        <li><img src="images/unicon2.jpg" alt=""><p><br>Flight of the Silverbird<br><br></p></li>
-        <li><img src="images/unicon3.jpg" alt=""><p><br>Friend Like Me<br><br></p></li>
-        <li><img src="images/unicon1.jpg" alt=""><p><br>Light<br><br></p></li>
-        <li><img src="images/unicon2.jpg" alt=""><p><br>Light<br><br></p></li>
-        <li><img src="images/unicon3.jpg" alt=""><p><br>Light<br><br></p></li>
+        <li><img src="images/media1.jpg" alt=""><p><br>タウンニュース<br><br></p></li>
+        <li><img src="images/media2.jpg" alt=""><p><br>ライオンのグータッチ<br><br></p></li>
+        <li><img src="images/media3.jpg" alt=""><p><br>上毛新聞<br><br></p></li>
+        <li><img src="images/media4.jpg" alt=""><p><br>タウンニュース<br><br></p></li>
+        <li><img src="images/media5.jpg" alt=""><p><br>タウンニュース<br><br></p></li>
     </ul>
 </section>
 
 <section id="event">
     <h3>イベント</h3>
 <ul class="slide-items bottom">
-    <li><img src="images/unicon1.jpg" alt=""><p><br>Light<br><br></p></li>
-    <li><img src="images/unicon2.jpg" alt=""><p><br>Flight of the Silverbird<br><br></p></li>
-    <li><img src="images/unicon3.jpg" alt=""><p><br>Friend Like Me<br><br></p></li>
-    <li><img src="images/unicon1.jpg" alt=""><p><br>Light<br><br></p></li>
-    <li><img src="images/unicon2.jpg" alt=""><p><br>Light<br><br></p></li>
-    <li><img src="images/unicon3.jpg" alt=""><p><br>Light<br><br></p></li>
+    <li><img src="images/event1.jpg" alt=""><p><br>2022　お披露目会<br><br></p></li>
+    <li><img src="images/event2.jpg" alt=""><p><br>キャンパスコレクション<br>2022　東京<br></p></li>
+    <li><img src="images/event3.jpg" alt=""><p><br>東海大学<br>ハーフタイムショー<br></p></li>
+    <li><img src="images/event4.jpg" alt=""><p><br>ひまわり祭り<br><br></p></li>
+    <li><img src="images/event5.jpg" alt=""><p><br>座間フェア<br><br></p></li>
 </ul>
 </section>
 
