--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Unicycle Smile</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel=”icon” type=”image/png” href=“/images/smile_logo.png”>
    
 </head>
 <body>
@@ -19,6 +20,9 @@
                 <li><a href="#contact">お問い合わせ</a></li>
             </ul>
         </nav>
+      
+
+
         <h1>ユニサイクルスマイル</h1>
     </header>
 
@@ -26,6 +30,7 @@
         <h2>ユニサイクルスマイルとは？</h2>
         <div class="about">
             <img class="about-img" src="images/uni00.png" alt="">
+            <img class="about-img-sp" src="images/uni00-sp.png" alt="">
             <div class="about-text-right">
                 <h3>みんなが<br>スマイルになれる場所！</h3>
                 <p><br>ユニサイクルスマイルとは、座間市・相模原市で活動する一輪車チームです。2005年に結成され、現在は幼稚園生から大学生まで、女の子と男の子の全27名で楽しく活動しています！</p>
@@ -33,26 +38,29 @@
                 <a class="button" href="https://www.youtube.com/channel/UCtc7etqYdWTuE3OZni9VvpQ/videos">Youtube</a>
             </div>
         </div>
-        <div class="about">
+        <div class="about-rev">
             <div class="about-text-left">
                 <h3>刺激をもらいながら楽しく練習できる！</h3>
                 <p><br>ユニサイクルスマイルでは、クラブ全員が同じ時間に練習します。コーチからの指導だけでなく実績のあるお姉さん部員と一緒に練習したり、教えてもらえるため、毎回刺激をもらいながら練習できます！部員みんなとっても優しく、年齢関係なくお話ししながら練習しているので楽しいこと間違いなし！</p>
             </div>
             <img class="about-img01" src="images/uni01.png" alt="">
+            <img class="about-img01-sp" src="images/uni01-sp.png" alt="">
         </div>
         <div class="about">
             <img class="about-img02" src="images/uni02.png" alt="">
+            <img class="about-img01-sp" src="images/uni02-sp.png" alt="">
             <div class="about-text-right">
                 <h3>プリンス、プリンセスになれる素敵な衣装！</h3>
                 <p><br>大会やイベントには練習着ではなく、衣装を着て出ます！キラキラしたストーンをいっぱいつけた衣装はとってもかわいいくて、ワクワクが止まりません！普段とは違う自分でテンションも上がります！年齢が上がるとスカートも長くなり、綺麗でドレスのような衣装を着れます！年齢の低い部員はお姉さんの衣装に憧れています。</p>
             </div>
         </div>
-        <div class="about">
+        <div class="about-rev">
             <div class="about-text-left">
                 <h3>様々なジャンルの演技！<br>構成はピカイチ！</h3>
                 <p><br>ユニサイクルスマイルでは、クラブ全員が同じ時間に練習します。コーチからの指導だけでなく実績のあるお姉さん部員と一緒に練習したり、教えてもらえるため、毎回刺激をもらいながら練習できます！部員みんなとっても優しく、年齢関係なくお話ししながら練習しているので楽しいこと間違いなし！</p>
             </div>
             <img class="about-img03" src="images/uni03.png" alt="">
+            <img class="about-img01-sp" src="images/uni03-sp.png" alt="">
         </div>
     </section>
     
@@ -84,6 +92,7 @@
             </div>
         </div>
         <img class="rect2" src="images/rect2.png" alt="">
+        <img class="rect2-sp" src="images/rect3.png" alt="">
     </section>
 
     <section id="message">
