--- a/activity.html
+++ b/activity.html
@@ -18,10 +18,9 @@
         <nav>
             <div class="logo"><img src="images/smile_logo.png" alt=""></div>
             <ul>
-                <li><a href="index.html">ユニサイクルスマイルとは</a></li>
-                <li><a href="index.html">大会・イベント</a></li>
-                <li><a href="index.html">活動内容</a></li>
-                <li><a href="index.html">お問い合わせ</a></li>
+                <li><a href="#activity">活動内容</a></li>
+                <li><a href="#year">年間日程</a></li>
+                <li><a href="#access">アクセス</a></li>
             </ul>
         </nav>
     </header>
@@ -31,18 +30,6 @@
     <section id="activity">
         <div>
         <h3>練習日</h3>
-        <!-- <p><br>毎週<br><br>月　18:00-20:00
-            <br>相模原市立清新小学校体育館<br>
-            <br>火　18:00-20:00
-            <br>相模原市立夢の丘小学校体育館<br>
-            <br>水　おやすみ<br>
-            <br>木　18:00-20:00
-            <br>相模原市立清新小学校体育館<br>
-            <br>金　おやすみ<br>
-            <br>土　9:00-17:00
-            <br>座間市立栗原小学校体育館<br>
-            <br>日　9:00-17:00
-            <br>座間市立相武台東小学校体育館</p> -->
             <img src="images/practice.png" alt="">
         </div>
 
@@ -51,56 +38,68 @@
     <section id="year">
         <img class="rect size" src="images/rect.png" alt="">
         <div class="year">
-        <h2>年間日程</h2>
+            <h2>年間日程</h2>
 
-        <!-- <div class="box-right">
-        <img src="images/year4.jpg" alt="">
-        <p class="center">進級祝い</p>
-        <p class="top-left">０４</p>
-
-        <div class="box-left">
-            <img src="images/year5.jpg" alt="">
-            <p class="center">わかば祭り</p>
-            <p class="top-left">０５</p>
-        </div> -->
-        <div class="year-wrapper">
-        <div class="right">
-            <img class=".year-pic" src="images/4.png" alt="">
-        </div>
-        <div class="left">
-            <img class=".year-pic"src="images/5.png" alt="">
-        </div>
-        <div class="right">
-            <img class=".year-pic" src="images/6.png" alt="">
-        </div>
-        <div class="left">
-            <img class=".year-pic"src="images/7.png" alt="">
-        </div>
-        <div class="right">
-            <img class=".year-pic" src="images/8.png" alt="">
-        </div>
-        <div class="left">
-            <img class=".year-pic"src="images/9.png" alt="">
-        </div>
-        <div class="right">
-            <img class=".year-pic" src="images/10.png" alt="">
-        </div>
-        <div class="left">
-            <img class=".year-pic"src="images/11.png" alt="">
-        </div>
-        <div class="right">
-            <img class=".year-pic" src="images/12.png" alt="">
-        </div>
-        <div class="left">
-            <img class=".year-pic"src="images/1.png" alt="">
-        </div>
-        <div class="right">
-            <img class=".year-pic" src="images/2.png" alt="">
-        </div>
-        <div class="left">
-            <img class=".year-pic"src="images/3.png" alt="">
-        </div>
-    </div>
+            <div class="relative-right">
+                <img src="images/year4.jpg" alt="">
+                <p class="month pink">０４</p>
+                <p class="absolute">進級祝い</p>
+            </div>
+            <div class="relative-left">
+                <img src="images/year5.jpg" alt="">
+                <p class="month yellow">０５</p>
+                <p class="absolute">若葉祭り</p>
+            </div>
+            <div class="relative-right">
+                <img src="images/year6.jpg" alt="">
+                <p class="month blue">０６</p>
+                <p class="absolute">東京大会</p>
+            </div>
+            <div class="relative-left">
+                <img src="images/year7.jpg" alt="">
+                <p class="month pink">０７</p>
+                <p class="absolute">全国大会（中学生以上）</p>
+            </div>
+            <div class="relative-right">
+                <img src="images/year8.JPG" alt="">
+                <p class="month yellow">０８</p>
+                <p class="absolute">ソロ・ペア大会</p>
+            </div>
+            <div class="relative-left">
+                <img src="images/year9.jpg" alt="">
+                <p class="month blue">０９</p>
+                <p class="absolute">全国大会（小学生）</p>
+            </div>
+            <div class="relative-right">
+                <img src="images/year10.jpg" alt="">
+                <p class="month pink">１０</p>
+                <p class="absolute">くりくり祭り</p>
+            </div>
+            <div class="relative-left">
+                <img src="images/year11.jpg" alt="">
+                <p class="month yellow">１１</p>
+                <p class="absolute">全国大会（ソロ）</p>
+            </div>
+            <div class="relative-right">
+                <img src="images/year12.jpg" alt="">
+                <p class="month blue">１２</p>
+                <p class="absolute">関東大会</p>
+            </div>
+            <div class="relative-left">
+                <img src="images/year1.jpg" alt="">
+                <p class="month pink">０１</p>
+                <p class="absolute">練習！</p>
+            </div>
+            <div class="relative-right">
+                <img src="images/year2.jpg" alt="">
+                <p class="month yellow">０２</p>
+                <p class="absolute">座間フェア</p>
+            </div>
+            <div class="relative-left">
+                <img src="images/year3.jpg" alt="">
+                <p class="month blue">０３</p>
+                <p class="absolute">ジュニア大会</p>
+            </div>
     </div>
 
     <img class="rect2" src="images/rect3.png" alt="">
