--- a/events.html
+++ b/events.html
@@ -17,10 +17,11 @@
         <nav>
             <div class="logo"><img src="images/smile_logo.png" alt=""></div>
             <ul>
-                <li><a href="index.html">ユニサイクルスマイルとは</a></li>
-                <li><a href="index.html">大会・イベント</a></li>
-                <li><a href="index.html">活動内容</a></li>
-                <li><a href="index.html">お問い合わせ</a></li>
+                <li><a href="#unicon">国際大会</a></li>
+                <li><a href="#zenkoku">全国大会</a></li>
+                <li><a href="#hapyo">発表会</a></li>
+                <li><a href="#media">メディア</a></li>
+                <li><a href="#event">イベント</a></li>
             </ul>
         </nav>
     </header>
