--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Unicycle Smile</title>
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel=”icon” type=”image/png” href=“/images/smile_logo.png”>
+    <link rel="shortcut icon" href="images/favicon.ico">
    
 </head>
 <body>
@@ -19,6 +19,16 @@
                 <li><a href="#activity">活動内容</a></li>
                 <li><a href="#contact">お問い合わせ</a></li>
             </ul>
+
+            <div class="burger"></div>
+            <div class="menu">
+                <ul class="menu_list">
+                  <li><a class="move" href="#about">ユニサイクルスマイルとは</a></li>
+                  <li><a class="move" href="#event">大会・イベント</a></li>
+                  <li><a class="move" href="#activity">活動内容</a></li>
+                  <li><a class="move" href="#contact">お問い合わせ</a></li>
+                </ul>
+              </div>
         </nav>
         <h1>ユニサイクルスマイル</h1>
     </header>
