--- a/activity.html
+++ b/activity.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="CSS/style.css">
     <!-- <link rel="stylesheet" href="CSS/events.css"> -->
     <link rel="stylesheet" href="CSS/activity.css">
+    <link rel="shortcut icon" href="images/favicon.ico">
 
     
 </head>
