--- a/events.html
+++ b/events.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="CSS/slick-theme.css">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/events.css">
+    <link rel="shortcut icon" href="images/favicon.ico">
 
     
 </head>
