--- a/activity.html
+++ b/activity.html
@@ -31,7 +31,12 @@
     <section id="activity">
         <div>
         <h3>練習日</h3>
-            <img src="images/practice.png" alt="">
+        <div class="practice">
+            <p>毎週</p>
+            <p>月<br><br>火<br><br>水<br>木<br><br>金<br>土<br><br>日<br></p>
+            <p>18:00-20:00<br>相模原市立清新小学校体育館<br>18:00-20:00<br>相模原市立夢の丘小学校体育館<br>おやすみ<br>18:00-20:00<br>相模原市立清新小学校体育館<br>おやすみ<br>9:00-17:00<br>座間市立栗原小学校体育館<br>9:00-17:00<br>座間市立相武台東小学校体育館</p>
+        </div>
+            <!-- <img src="images/practice.png" alt=""> -->
         </div>
 
     </section>
