--- a/activity.html
+++ b/activity.html
@@ -23,6 +23,16 @@
                 <li><a href="#year">年間日程</a></li>
                 <li><a href="#access">アクセス</a></li>
             </ul>
+
+            <div class="burger"></div>
+                <div class="menu">
+                    <ul class="menu_list">
+                      <li><a class="move" href="#activity">活動内容</a></li>
+                      <li><a class="move" href="#year">年間日程</a></li>
+                      <li><a class="move" href="#access">アクセス</a></li>
+                    </ul>
+                  </div>
+            </nav>
         </nav>
     </header>
 
