--- a/events.html
+++ b/events.html
@@ -24,6 +24,17 @@
                 <li><a href="#media">メディア</a></li>
                 <li><a href="#event">イベント</a></li>
             </ul>
+
+            <div class="burger"></div>
+                <div class="menu">
+                    <ul class="menu_list">
+                      <li><a class="move" href="#unicon">国際大会</a></li>
+                      <li><a class="move" href="#zenkoku">全国大会</a></li>
+                      <li><a class="move" href="#hapyo">発表会</a></li>
+                      <li><a class="move" href="#media">メディア</a></li>
+                      <li><a class="move" href="#event">イベント</a></li>
+                    </ul>
+                  </div>
         </nav>
     </header>
 
